--- a/Introduction to python.ipynb
+++ b/Introduction to python.ipynb
@@ -194,9 +194,9 @@
    "source": [
     "age = 18\n",
     "if age >= 18:\n",
-    "    print (\"You're an adult.\")\n",
+    "    print (\"I'm Kendrick.\")\n",
     "else:\n",
-    "    print (\"You're a minor.\")"
+    "    print (\"I am Drake, I love minors :)\")"
    ]
   },
   {
@@ -228,23 +228,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ticket Price: 15€\n"
+      "Ticket Price: 8€\n"
      ]
     }
    ],
    "source": [
-    "age = 18\n",
-    "is_student = False\n",
-    "has_coupon = False\n",
-    "\n",
-    "if age < 12: \n",
-    "    print (\"Ticket Price: 0€\")\n",
-    "elif age >= 12 and age <= 17:\n",
-    "    print (\"Ticket Price: 6€\")\n",
-    "elif age >= 18 and is_student or has_coupon:\n",
-    "    print (\"Ticket Price: 8€\")\n",
-    "else: \n",
-    "    print (\"Ticket Price: 15€\")\n",
+    "#exercício de merda, calma \n",
     "    "
    ]
   },
@@ -291,7 +280,7 @@
    "id": "42b460f1",
    "metadata": {},
    "source": [
-    "## **For && While**"
+    "## **For & While**"
    ]
   },
   {
@@ -338,22 +327,18 @@
    "source": [
     "## **Exercise - For**\n",
     "\n",
-    "ages = [8, 15, 22, 30, 11, 40]\n",
+    "stock = [12, 5, 20, 3, 8, 15]\n",
     "\n",
-    "Rules:      \n",
-    "    Under 12: 0€      \n",
-    "    Between 12 & 17: 6€    \n",
-    "    +18: 12€\n",
-    "\n",
-    "Use for to:      \n",
-    "    - Calculate the price to each client     \n",
-    "    - The output to be like this:     \n",
-    "     Client age: 8 → Ticket Price: 0€"
+    "Objective:\n",
+    "    Use for to run the list   \n",
+    "    inside the circle, verify if the quantity is below 10   \n",
+    "    if it is, print - Alert, low stock (only [quantity] units!)   \n",
+    "    if it is 10 or more, print - Stock ok: [quantity] units!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "bb714f27",
    "metadata": {},
    "outputs": [
@@ -361,27 +346,272 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ticket Price: 0€\n",
-      "Ticket Price: 6€\n",
-      "Ticket Price: 15€\n",
-      "Ticket Price: 15€\n",
-      "Ticket Price: 0€\n",
-      "Ticket Price: 15€\n"
+      "Stock ok: 12 units available.\n",
+      "Alert, low stock (only  5  units left)!\n",
+      "Stock ok: 20 units available.\n",
+      "Alert, low stock (only  3  units left)!\n",
+      "Alert, low stock (only  8  units left)!\n",
+      "Stock ok: 15 units available.\n"
      ]
     }
    ],
    "source": [
-    "ages = [8, 15, 22, 30, 11, 40]\n",
+    "stock = [12, 5, 20, 3, 8, 15]\n",
     "\n",
-    "for age in ages: \n",
-    "    if age < 12:\n",
-    "        price = 0\n",
-    "    elif age >= 12 and age <= 17:\n",
-    "        price = 6\n",
-    "    elif age >= 18:\n",
-    "        price = 12\n",
+    "for stock_quantity in stock:\n",
+    "    if stock_quantity < 10:\n",
+    "        print (f\"Alert, low stock (only  {stock_quantity}  units left)!\")\n",
+    "    else:\n",
+    "        print (f\"Stock ok: {stock_quantity} units available.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42a44b6d",
+   "metadata": {},
+   "source": [
+    "## **Another Exercise - For**\n",
     "\n",
-    "print(f\"Age: {age}, Ticket Price: {price}€\")"
+    "products = [\"Mouse\", \"Keyboard\", \"Screen\", \"Headphones\", \"HDMI Cable\", \"mousepad\"]   \n",
+    "stock = [12, 5, 20, 3, 8, 15]\n",
+    "\n",
+    "Objective:\n",
+    "    Use the for cycle with the function range(len(stock)) to print the name of the product and its quantity.\n",
+    "\n",
+    "Expected output:\n",
+    "    Mouse: 12 units"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87d854bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mouse - 12 units\n",
+      "Keyboard - 5 units\n",
+      "Screen - 20 units\n",
+      "Headphones - 3 units\n",
+      "HDMI Cable - 8 units\n",
+      "Mousepad - 15 units\n"
+     ]
+    }
+   ],
+   "source": [
+    "products = [\"Mouse\", \"Keyboard\", \"Screen\", \"Headphones\", \"HDMI Cable\", \"Mousepad\"]   \n",
+    "stock = [12, 5, 20, 3, 8, 15]\n",
+    "\n",
+    "for i in range(len(products)):\n",
+    "    product_name = products[i]\n",
+    "    stock_quantity = stock[i]\n",
+    "    print(f\"{product_name} - {stock_quantity} units\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08c8e167",
+   "metadata": {},
+   "source": [
+    "## **Exercise - While**\n",
+    "\n",
+    "Make a warning to a user of the cellphone when the battery hits below 5%      \n",
+    "\n",
+    "Use the while, while the battery > 0          \n",
+    "Inside the cycle, print \"Battery: {battery}%\"          \n",
+    "Remove 1 to the battery each cycle           \n",
+    "In the end print: \"Phone turned off           "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "bd2f5c6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Battery level: 5 \n",
+      "Battery level: 4 \n",
+      "Battery level: 3 \n",
+      "Battery level: 2 \n",
+      "Battery level: 1 \n",
+      "Battery empty. Please recharge.\n"
+     ]
+    }
+   ],
+   "source": [
+    "battery = 5\n",
+    "\n",
+    "while battery > 0:\n",
+    "    print (f\"Battery level: {battery} \")\n",
+    "    battery -= 1\n",
+    "    if battery == 0:\n",
+    "        print (\"Battery empty. Please recharge.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fac63588",
+   "metadata": {},
+   "source": [
+    "## **Another exercise - While**\n",
+    "\n",
+    "Create a numeric safe\n",
+    "\n",
+    "Objective:\n",
+    "    Create a variable called \"correct_pin\" with the value \"1234\"            \n",
+    "    Create a variable \"attempt\" that starts empty: \" \"          \n",
+    "    Use the cycle while that continues to run while \"attempt\" is different from the \"correct_pin\"         \n",
+    "                    \n",
+    "Inside the cycle:             \n",
+    "    Ask the user to type the PIN and save the try in \"attempt\"            \n",
+    "    If the PIN is wrong, print: (\"Access denied. Try again\")                 \n",
+    "               \n",
+    "Outside the cycle:              \n",
+    "    If the PIN is correct: (\"Access granted, Welcome!)               "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cedc6064",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Access granted, Welcome!\n"
+     ]
+    }
+   ],
+   "source": [
+    "correct_pin = \"1234\"\n",
+    "attempt = \"\"\n",
+    "\n",
+    "while attempt != correct_pin:\n",
+    "    attempt = input(\"Enter the PIN to the safe:\")\n",
+    "    if attempt == correct_pin:\n",
+    "        print(\"Access granted, Welcome!\")\n",
+    "    else: \n",
+    "        print(\"Access denied. Try again.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1cc6926",
+   "metadata": {},
+   "source": [
+    "## **Exercise - For && While**\n",
+    "\n",
+    "Shop Cart System\n",
+    "\n",
+    "We don't know how many products the client wants to buy\n",
+    "\n",
+    "After the client finishes, we want to list everything that he bought and apply a discount. \n",
+    "\n",
+    "\n",
+    "Part 1:\n",
+    "    Create an empty list called: \"cart\"           \n",
+    "    Print a list with all the products the client can buy and each price.                \n",
+    "    Create a cycle which asks the name of the product          \n",
+    "    If the user writes \"End\" the cycle stops             \n",
+    "    If not, keep asking to add products              \n",
+    "\n",
+    "Part 2        \n",
+    "    With the list full, print each product of the list in uppercase.          \n",
+    "    Print how much products the client bought"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bb2a891e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Screen 4k: 350€\n",
+      "Gaming Mouse: 45.9€\n",
+      "Mechanical keyboard: 89€\n",
+      "Headphones: 59.99€\n",
+      "Office Chair: 120€\n",
+      "Webcam: 15.5€\n",
+      "HDMI Cable 2m: 65€\n",
+      "SSD 1TB: 12.9€\n",
+      "Portable Support: 55€\n",
+      "------------------------------\n",
+      "Added Screen 4k (350€) to your cart\n",
+      "Added Gaming Mouse (45.9€) to your cart\n",
+      "Added SSD 1TB (12.9€) to your cart\n",
+      "Product not found. Please check the name (Case sensitive).\n",
+      "\n",
+      "==============================\n",
+      "Items bought: 3\n",
+      "Gross total: 408.79999999999995\n",
+      "Discount: (3% -12.26€)\n",
+      "Final price: 396.54€\n",
+      "==============================\n"
+     ]
+    }
+   ],
+   "source": [
+    "products = [\"Screen 4k\", \"Gaming Mouse\", \"Mechanical keyboard\", \"Headphones\", \"Office Chair\", \"Webcam\", \"HDMI Cable 2m\", \"SSD 1TB\", \"Portable Support\" ]\n",
+    "prices = [350, 45.90, 89, 59.99, 120, 15.50, 65, 12.90, 55, 25]\n",
+    "\n",
+    "#Print the available products and the prices of each one\n",
+    "for i in range(len(products)):\n",
+    "    products_list = products[i]\n",
+    "    products_prices = prices[i]\n",
+    "    print(f\"{products_list}: {products_prices}€\")\n",
+    "\n",
+    "print(\"-\" * 30)\n",
+    "\n",
+    "#Choosing which product the client will add to the cart\n",
+    "user_cart = []\n",
+    "gross_total = 0\n",
+    "cart = \"\"\n",
+    "\n",
+    "while cart != \"End\":\n",
+    "    cart = input(\"Which product you wanna buy? Type End to finish your cart!\")\n",
+    "    if cart in products:\n",
+    "        index = products.index(cart)\n",
+    "        product_price = prices[index]\n",
+    "\n",
+    "        user_cart.append(cart)\n",
+    "        gross_total += product_price\n",
+    "        print(f\"Added {cart} ({product_price}€) to your cart\")\n",
+    "    else:\n",
+    "        print(\"Product not found. Please check the name (Case sensitive).\")        \n",
+    "\n",
+    "#Calculate discount based on the items quantity\n",
+    "numb_items = len(user_cart)\n",
+    "if numb_items > 0:\n",
+    "    discount_percent = numb_items\n",
+    "    discount_value = gross_total * (discount_percent / 100)\n",
+    "    total_final = gross_total - discount_value\n",
+    "\n",
+    "    print(\"\\n\" + \"=\"*30) \n",
+    "    print(f\"Items bought: {numb_items}\")\n",
+    "    print(f\"Gross total: {gross_total}\")\n",
+    "    print(f\"Discount: ({discount_percent}% -{discount_value:.2f}€)\")\n",
+    "    print(f\"Final price: {total_final:.2f}€\")\n",
+    "    print(\"=\"*30)\n",
+    "else:\n",
+    "    print(\"Empty cart. See you next time!\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
